Prevent loading screen from always being visible

--- a/styles/scrabble.css
+++ b/styles/scrabble.css
@@ -468,7 +468,6 @@ input#chatInput {
 }
 
 #scrabbleGrid #loadingCell {
-	display: flex;
 	justify-content: center;
 	align-items: center;
 }
